# GAMES101-02

./: CMakeLists.txt  CMakeSettings.json  Triangle.cpp  Triangle.hpp  __INCLUDE__.h  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
